Computer will resign now if losing by too much